Fix weekday input text color Add option to render categories or tasks on task list view Remove border from settings on mobile Remove shadow from tasks Adjust some z-indexes Change when the no tasks component renders on home

--- a/client/src/components/buttons/Chip/Chip.module.scss
+++ b/client/src/components/buttons/Chip/Chip.module.scss
@@ -25,4 +25,12 @@
         color: var(--on-primary-color);
         border: none;
     }
+
+    &.small {
+        font-size: $font-s;
+    }
+
+    &.big {
+        font-size: $font-xxl;
+    }
 }
