--- a/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
@@ -26,7 +26,7 @@
 .container {
   position: fixed;
   background-color: var(--surface-color);
-  z-index: 2;
+  z-index: 3;
   flex-wrap: nowrap;
   gap: 0;
 }
